--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The goal of rsisagua is to download and filter Sisagua files from Portal Brasile
 You can install the development version of rsisagua from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
+install.packages("devtools")
 devtools::install_github("camposvieira/rsisagua")
 ```
 
@@ -35,22 +35,20 @@ devtools::install_github("camposvieira/rsisagua")
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-#library(rsisagua)
-## basic example code
+
+# X <- download_vigdp(periodo = c(2020:2022),
+#                     regiao = "NORTE",
+#                     unidade_federativa = c("AC", "AM", "RO"))
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
+```{r vigdp}
+#summary(x)
 ```
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
 
-You can also embed plots, for example:
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
 
 In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
